[package]
name = "statechain-core"
version = "0.1.0"
authors = ["Kevin Kelbie <kevin@kelbie.me"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-ini = "0.14.0"
actix-web = "1.0"
tempdir = "0.3.7"
leveldb = "0.8.4"
rocksdb = "0.13.0"
bincode = "1.2.1"
crossbeam = "0.7"
crossbeam-channel = "0.4"
bitcoin_hashes = "0.7"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"
sha2 = "0.8.1"

hex = "0.3.2"
curv = { git = "https://github.com/KZen-networks/curv" , tag = "v0.2.4", features =  ["ec_secp256k1","merkle"]}
multi-party-schnorr = { git = "https://github.com/KZen-networks/multi-party-schnorr" }
mockito = "0.23.3"
reqwest = "0.10.2"
ureq = { version = "0.11.4", features = ["json"] }
futures = "0.3.4"
